# qt_cmake_boilerplate

./: CMakeLists.txt
cmake/modules/: ptc-standard.cmake
source/apps/: CMakeLists.txt
source/apps/app1/: CMakeLists.txt
source/libs/: CMakeLists.txt
source/libs/liba/: CMakeLists.txt  libalib.cpp  libalib.h  libalib_global.h
tests/: CMakeLists.txt
tests/test_liba/: CMakeLists.txt  testdata.qrc  tst_liba.cpp
